# fabel-flip

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
examples/: codama.mjs  coinflip.ts  package-lock.json  package.json  tsconfig.json
idl/: coinflip.json
programs/coinflip/: Cargo.toml
programs/coinflip/src/: lib.rs
programs/coinflip/tests/: coinflip.rs
scripts/: build-idl.mjs
